--- a/Mohaeng/Mohaeng/Sources/Cells/CharaterCollectionView/CharacterColorCollectionViewCell.xib
+++ b/Mohaeng/Mohaeng/Sources/Cells/CharaterCollectionView/CharacterColorCollectionViewCell.xib
@@ -11,32 +11,30 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CharacterColorCollectionViewCell" customModule="Mohaeng" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="100" height="120"/>
+            <rect key="frame" x="0.0" y="0.0" width="100" height="176"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="100" height="120"/>
+                <rect key="frame" x="0.0" y="0.0" width="100" height="176"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OwK-DA-n3p">
-                        <rect key="frame" x="0.0" y="0.0" width="100" height="120"/>
+                        <rect key="frame" x="0.0" y="0.0" width="100" height="176"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1Grp" translatesAutoresizingMaskIntoConstraints="NO" id="nML-HR-NKT">
-                                <rect key="frame" x="0.0" y="0.0" width="100" height="120"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="120" id="CJ6-ge-8aG"/>
-                                    <constraint firstAttribute="width" constant="100" id="hsA-3c-0Sc"/>
-                                </constraints>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-1" translatesAutoresizingMaskIntoConstraints="NO" id="nML-HR-NKT">
+                                <rect key="frame" x="0.0" y="0.0" width="100" height="176"/>
                             </imageView>
                             <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="selectedImage" translatesAutoresizingMaskIntoConstraints="NO" id="vvT-oc-lyk">
                                 <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                             </imageView>
                             <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="new" translatesAutoresizingMaskIntoConstraints="NO" id="5oo-ho-PVL">
-                                <rect key="frame" x="0.0" y="95" width="28" height="13"/>
+                                <rect key="frame" x="0.0" y="151" width="28" height="13"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="nML-HR-NKT" secondAttribute="bottom" id="Epq-ZF-3wD"/>
                             <constraint firstItem="vvT-oc-lyk" firstAttribute="leading" secondItem="OwK-DA-n3p" secondAttribute="leading" id="Ppo-EQ-ahj"/>
+                            <constraint firstItem="nML-HR-NKT" firstAttribute="leading" secondItem="OwK-DA-n3p" secondAttribute="leading" id="Vxr-im-I6Q"/>
                             <constraint firstItem="vvT-oc-lyk" firstAttribute="top" secondItem="OwK-DA-n3p" secondAttribute="top" id="bvG-Mg-pKR"/>
                             <constraint firstAttribute="bottom" secondItem="5oo-ho-PVL" secondAttribute="bottom" constant="12" id="com-Og-1yG"/>
                             <constraint firstAttribute="trailing" secondItem="nML-HR-NKT" secondAttribute="trailing" id="eAB-AQ-fUt"/>
@@ -53,18 +51,18 @@
                 <constraint firstAttribute="bottom" secondItem="OwK-DA-n3p" secondAttribute="bottom" id="RfQ-pF-Ijw"/>
                 <constraint firstAttribute="trailing" secondItem="OwK-DA-n3p" secondAttribute="trailing" id="eBK-aY-5yv"/>
             </constraints>
-            <size key="customSize" width="112" height="122"/>
+            <size key="customSize" width="112" height="178"/>
             <connections>
                 <outlet property="charaterImageView" destination="nML-HR-NKT" id="KiG-60-IrF"/>
                 <outlet property="newImageView" destination="5oo-ho-PVL" id="Qae-Rg-JEh"/>
                 <outlet property="selectedImageView" destination="vvT-oc-lyk" id="Gzl-6T-PCx"/>
             </connections>
-            <point key="canvasLocation" x="182.60869565217394" y="209.59821428571428"/>
+            <point key="canvasLocation" x="182.60869565217394" y="228.34821428571428"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="1Grp" width="293.5" height="358"/>
         <image name="new" width="28" height="13"/>
+        <image name="sample-1" width="196" height="323"/>
         <image name="selectedImage" width="20" height="20"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
