--- a/Mohaeng/Mohaeng/Sources/Cells/CharaterCollectionView/CharacterTypeCollectionViewCell.xib
+++ b/Mohaeng/Mohaeng/Sources/Cells/CharaterCollectionView/CharacterTypeCollectionViewCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -22,7 +23,7 @@
                         <subviews>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ftV-Fq-XU0">
                                 <rect key="frame" x="0.0" y="35" width="75" height="36"/>
-                                <color key="backgroundColor" red="1" green="0.8901960784313725" blue="0.60784313725490191" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" name="YellowButton2"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="huT-r9-3jI"/>
                                 </constraints>
@@ -61,6 +62,9 @@
     </objects>
     <resources>
         <image name="Charater" width="60" height="60"/>
+        <namedColor name="YellowButton2">
+            <color red="1" green="0.88999998569488525" blue="0.60799998044967651" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
