--- a/Mohaeng/Mohaeng/Sources/Views/ChallengeStampView.xib
+++ b/Mohaeng/Mohaeng/Sources/Views/ChallengeStampView.xib
@@ -35,10 +35,8 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Of-o4-vt6">
                     <rect key="frame" x="24" y="149" width="342" height="98"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H2g-88-EEw">
-                            <rect key="frame" x="118" y="31.333333333333346" width="212" height="35.333333333333343"/>
-                            <string key="text">어제 외운 단어 기억 나지?
-어제 외운 단어로 문장을 만들어봐~ </string>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H2g-88-EEw">
+                            <rect key="frame" x="98" y="49" width="232" height="0.0"/>
                             <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="14"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -58,10 +56,10 @@
                         <action selector="touchHelp:" destination="iN0-l3-epB" eventType="touchUpInside" id="Mma-Mc-lE9"/>
                     </connections>
                 </button>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sampleChallengeRacoon" translatesAutoresizingMaskIntoConstraints="NO" id="BV7-E8-JT9">
-                    <rect key="frame" x="24" y="95.666666666666671" width="110" height="151.33333333333331"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BV7-E8-JT9">
+                    <rect key="frame" x="24" y="123.33333333333331" width="90" height="123.66666666666669"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="110" id="TgE-kn-eIu"/>
+                        <constraint firstAttribute="width" constant="90" id="TgE-kn-eIu"/>
                         <constraint firstAttribute="width" secondItem="BV7-E8-JT9" secondAttribute="height" multiplier="80:110" id="uch-V9-52E"/>
                     </constraints>
                 </imageView>
@@ -94,7 +92,7 @@
                                 <constraint firstItem="TRQ-Vn-owg" firstAttribute="top" secondItem="Sw0-eU-8jJ" secondAttribute="top" constant="6" id="ppT-yb-s2h"/>
                             </constraints>
                         </view>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="어제 외운 단어로 문장 만들기" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yCh-eY-nvn">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yCh-eY-nvn">
                             <rect key="frame" x="0.0" y="72" width="342" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="25" id="atj-Ek-i48"/>
@@ -193,7 +191,6 @@
     </objects>
     <resources>
         <image name="challengeHelpButton" width="28" height="28"/>
-        <image name="sampleChallengeRacoon" width="80" height="110"/>
         <image name="scrollDownIcn" width="31.333333969116211" height="19.333333969116211"/>
         <image name="typeMchallenge" width="144" height="144"/>
         <systemColor name="systemBackgroundColor">
