--- a/Mohaeng/Mohaeng/Sources/ViewControllers/PopUp/ChallengeComplete/ChallengeCompletePopUpViewController.xib
+++ b/Mohaeng/Mohaeng/Sources/ViewControllers/PopUp/ChallengeComplete/ChallengeCompletePopUpViewController.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -35,7 +36,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9m3-G3-Ww2">
-                    <rect key="frame" x="78.5" y="238.5" width="257" height="429"/>
+                    <rect key="frame" x="78.5" y="236.5" width="257" height="433"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="인증하기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HSc-xI-pZF">
                             <rect key="frame" x="102.5" y="22" width="52" height="18"/>
@@ -44,9 +45,9 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ODf-3D-Kkl">
-                            <rect key="frame" x="205" y="10" width="44" height="44"/>
+                            <rect key="frame" x="215" y="10" width="34" height="34"/>
                             <color key="tintColor" name="Black"/>
-                            <state key="normal" image="gnbIconX"/>
+                            <state key="normal" image="icnPopX"/>
                             <connections>
                                 <action selector="touchCloseButton:" destination="-1" eventType="touchUpInside" id="VhL-T2-36d"/>
                             </connections>
@@ -58,10 +59,10 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="okImg" translatesAutoresizingMaskIntoConstraints="NO" id="j5X-zI-gLq">
-                            <rect key="frame" x="68" y="116" width="125" height="88"/>
+                            <rect key="frame" x="55.5" y="116" width="150" height="92"/>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="FEp-4w-KQx">
-                            <rect key="frame" x="28" y="228" width="201" height="172"/>
+                            <rect key="frame" x="28" y="232" width="201" height="172"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4zl-fA-IpR">
                                     <rect key="frame" x="0.0" y="0.0" width="201" height="48"/>
@@ -136,8 +137,8 @@
         </view>
     </objects>
     <resources>
-        <image name="gnbIconX" width="44" height="44"/>
-        <image name="okImg" width="125" height="88"/>
+        <image name="icnPopX" width="34" height="34"/>
+        <image name="okImg" width="150" height="92"/>
         <namedColor name="Black">
             <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
