[#462] MoodCollectionViewCell 경로 error, QA 반영
### Description
- MoodCollectionViewCell 경로 error
- 챌린지뷰 스크롤 바운스 없애기

### Related Issue
Resolve #462

--- a/Mohaeng/Mohaeng/Sources/Views/CourseHistoryHeaderView.xib
+++ b/Mohaeng/Mohaeng/Sources/Views/CourseHistoryHeaderView.xib
@@ -89,6 +89,7 @@
                 <outlet property="dayLabel" destination="d4l-Wu-pV1" id="8tn-hW-HfL"/>
                 <outlet property="headerBgView" destination="ibZ-hW-nAO" id="xVZ-gg-ULU"/>
                 <outlet property="propertyImageView" destination="Luw-Fo-ILl" id="Ti4-T8-uui"/>
+                <outlet property="successDateLabel" destination="MTy-Hx-xXk" id="mKv-xS-ba9"/>
             </connections>
             <point key="canvasLocation" x="162.31884057971016" y="-161.71875"/>
         </view>
