--- a/Mohaeng/Mohaeng/Sources/Cells/NotificationCollectionView/ProfileBubbleCollectionViewCell.xib
+++ b/Mohaeng/Mohaeng/Sources/Cells/NotificationCollectionView/ProfileBubbleCollectionViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -12,19 +13,22 @@
         <array key="GmarketSansTTFMedium.ttf">
             <string>GmarketSansTTFMedium</string>
         </array>
+        <array key="SpoqaHanSansNeo-Regular.otf">
+            <string>SpoqaHanSansNeo-Regular</string>
+        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ProfileBubbleCollectionViewCell" customModule="Journey" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="84"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ProfileBubbleCollectionViewCell" customModule="Mohaeng" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="92"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="84"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="92"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dBa-hm-uwn">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="84"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="92"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f9U-CR-FrZ">
                                 <rect key="frame" x="24" y="15" width="48" height="48"/>
@@ -43,18 +47,18 @@
                                     <constraint firstAttribute="bottom" secondItem="k7v-6k-hII" secondAttribute="bottom" id="mbm-sL-rzX"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="모행" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v0F-Z8-gwS">
-                                <rect key="frame" x="80" y="15" width="21" height="12"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="모행" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v0F-Z8-gwS">
+                                <rect key="frame" x="80" y="15" width="23.5" height="12"/>
                                 <fontDescription key="fontDescription" name="GmarketSansTTFMedium" family="Gmarket Sans TTF" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4MH-zS-VJF">
-                                <rect key="frame" x="86" y="42" width="213.5" height="38"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4MH-zS-VJF">
+                                <rect key="frame" x="86" y="42" width="222" height="39"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="너의 안부에 스티커가 붙여졌어!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="043-uD-Qie">
-                                        <rect key="frame" x="14" y="10" width="185.5" height="18"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="너의 안부에 스티커가 붙여졌어!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="043-uD-Qie">
+                                        <rect key="frame" x="14" y="10" width="194" height="19"/>
+                                        <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -68,12 +72,12 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1시간 전" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3jx-Zw-0dj">
-                                <rect key="frame" x="307.5" y="68" width="34" height="12"/>
+                                <rect key="frame" x="316" y="76" width="34" height="12"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="textColor" name="GreyTextPush2"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="textBalloonGraphic" translatesAutoresizingMaskIntoConstraints="NO" id="0mv-fq-pal">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="textBalloonGraphic" translatesAutoresizingMaskIntoConstraints="NO" id="0mv-fq-pal">
                                 <rect key="frame" x="80" y="45" width="11" height="16"/>
                             </imageView>
                         </subviews>
@@ -83,14 +87,13 @@
                             <constraint firstAttribute="bottom" secondItem="3jx-Zw-0dj" secondAttribute="bottom" constant="4" id="9Qz-aV-G2C"/>
                             <constraint firstItem="0mv-fq-pal" firstAttribute="top" secondItem="4MH-zS-VJF" secondAttribute="top" constant="3" id="AIV-3J-eMd"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="3jx-Zw-0dj" secondAttribute="trailing" constant="23" id="F8H-Ub-AEy"/>
-                            <constraint firstItem="3jx-Zw-0dj" firstAttribute="bottom" secondItem="4MH-zS-VJF" secondAttribute="bottom" id="JkB-8x-mEs"/>
                             <constraint firstItem="3jx-Zw-0dj" firstAttribute="leading" secondItem="4MH-zS-VJF" secondAttribute="trailing" constant="8" id="PcE-jB-0Sp"/>
                             <constraint firstItem="v0F-Z8-gwS" firstAttribute="leading" secondItem="f9U-CR-FrZ" secondAttribute="trailing" constant="8" id="U6N-3g-QNM"/>
                             <constraint firstItem="4MH-zS-VJF" firstAttribute="top" secondItem="v0F-Z8-gwS" secondAttribute="bottom" constant="15" id="bwy-vd-Ilv"/>
                             <constraint firstItem="4MH-zS-VJF" firstAttribute="leading" secondItem="0mv-fq-pal" secondAttribute="trailing" constant="-5" id="giJ-7Q-cFu"/>
                             <constraint firstItem="4MH-zS-VJF" firstAttribute="leading" secondItem="f9U-CR-FrZ" secondAttribute="trailing" constant="14" id="jVw-PL-aED"/>
                             <constraint firstItem="f9U-CR-FrZ" firstAttribute="leading" secondItem="dBa-hm-uwn" secondAttribute="leading" constant="24" id="kIv-0u-XyC"/>
-                            <constraint firstItem="v0F-Z8-gwS" firstAttribute="top" secondItem="k7v-6k-hII" secondAttribute="top" id="xVk-qF-oba"/>
+                            <constraint firstItem="v0F-Z8-gwS" firstAttribute="top" secondItem="dBa-hm-uwn" secondAttribute="top" constant="15" id="zpg-Ar-BQU"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -102,7 +105,7 @@
                 <constraint firstItem="dBa-hm-uwn" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="aCx-L8-ntK"/>
                 <constraint firstAttribute="trailing" secondItem="dBa-hm-uwn" secondAttribute="trailing" id="hf0-gX-voa"/>
             </constraints>
-            <size key="customSize" width="414" height="84"/>
+            <size key="customSize" width="414" height="92"/>
             <connections>
                 <outlet property="bubbleBgView" destination="4MH-zS-VJF" id="bk3-yd-NsG"/>
                 <outlet property="bubbleTextLabel" destination="043-uD-Qie" id="gb3-eZ-f6Z"/>
@@ -110,7 +113,7 @@
                 <outlet property="profileBgView" destination="f9U-CR-FrZ" id="E8t-Pn-vdz"/>
                 <outlet property="profileImageView" destination="k7v-6k-hII" id="cUk-1h-T4v"/>
             </connections>
-            <point key="canvasLocation" x="397.10144927536237" y="89.732142857142847"/>
+            <point key="canvasLocation" x="397.10144927536237" y="92.410714285714278"/>
         </collectionViewCell>
     </objects>
     <resources>
